--- a/GSS KARU/index.html
+++ b/GSS KARU/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="Qy_uJqYIyxNw4ZByXFyTiBx7u2Pj8-TuwqbfbKjv9k4" />
     <title>gsskaru.com</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Hi there</h1>
    <nav class="navbar">
   <div class="nav-left">
     <a href="#">
@@ -81,4 +83,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
